--- a/front-end/src/app/shared/scss/_custom-reset.scss
+++ b/front-end/src/app/shared/scss/_custom-reset.scss
@@ -1,3 +1,8 @@
+/**
+ * A custom reset file for various HTML elements.
+ * Not including all elements because Boostrap uses Normalize.
+ */
+
 ul {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
