--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -42,12 +42,14 @@
 	        }
 	        @include media(mediumDesktop) {
 	          float: left;
+	          margin-bottom: 10px;
 	          padding-top: 0;
 	          text-align: right;
 	          width: 50%;
 	        }         
 	        @include media(largeDesktop) {
 	          float: left;
+	          margin-bottom: 10px;
 	          padding-top: 0;
 	          text-align: right;
 	          width: 50%;
