--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -1,14 +1,15 @@
 <aside>
   <div class="sidebar" [ngClass]="sidebarVisibleClass">
-    <div class="sidebar__toggle">
-      <a class="toggle-sidebar"
-        role="button"
-        (click)="toggleSideNav()"
+    <div class="sidebar__toggle"> 
+      <button
+       type="button"
+       class="btn btn-link toggle-sidebar"
+       (click)="toggleSideNav()"
       >
         <i [ngClass]="iconClass">
           <span class="sr-only">Toggle Sidebar</span>
-        </i>
-      </a>           
+        </i>        
+      </button>          
     </div>    
     <nav>
       <div class="sidebar__nav">
