Adding required text description

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -41,8 +41,11 @@
           </div>
         </div>
         <div class="grid-row">
-          <div class="grid-row__col grid-row__col--12">
+          <div class="grid-row__col grid-row__col--6 text-left">
             <b>Enter your text*</b>
+          </div>
+          <div class="grid-row__col grid-row__col--6 text-right text-required">
+            * = Required
           </div>
         </div>
         <div class="grid-row">
