Mahendra's UI changes

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -125,9 +125,9 @@
                 </div>
                  <div class="grid-col">
                  <!--<button class="btn btn-primary" type="button" id="button-addon2" (click)="add_additional_email_2()"> -->
-                 <!--<button class="btn btn-primary" type="button" id="button-addon2" (click)="add_additional_email_2()">
+                 <button class="btn btn-primary" type="button" id="button-addon2" (click)="add_additional_email_2()">
                        <i class="fa fa-plus-circle"></i>
-                 </button>-->
+                 </button>
                 </div>
                 </div>
                  <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
@@ -136,8 +136,8 @@
                    </div>
                  </div>
                </div>
-               <!--<div class="additional-email__field"   *ngIf="_need_additional_email_2">-->
-               <div class="additional-email__field"   >
+               <div class="additional-email__field"   *ngIf="_need_additional_email_2">
+               <!--<div class="additional-email__field"   >-->
                 <div class="grid-row">
                 <div class="grid-col">
                  <input
@@ -150,9 +150,9 @@
                  </div>
                  <div class="grid-col">
                  <!--<button class="btn btn-danger" class="btn btn-link" type="button" id="button-addon2" (click)="remove_additional_email_2()>-->
-                    <!--<button class="btn btn-danger" type="button" id="button-addon2" (click)="remove_additional_email_2()">  
+                    <button class="btn btn-danger" type="button" id="button-addon2" (click)="remove_additional_email_2()">  
                           <i class="fa fa-minus-circle"></i>
-                    </button>-->
+                    </button>
                   </div>
                  </div>
                  <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
