changes from UI M

--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -149,7 +149,7 @@
       <div class="grid-row">
         <div class="grid-row-col grid-row__col--12">
           <hr />
-          <h4>Attachments</h4>
+          <h4>Attachment: <a href="{{ org_fileurl }}">{{ org_filename }}</a></h4>
           <hr />
           <br />
         </div>
