--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -186,7 +186,7 @@
              <input
                type="checkbox"
                id="agreement"
-               name="agree"
+               name="agreement"
                value="yes"
                (change)="updateValidation($event)"
                formControlName="agreement"
