--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -122,7 +122,7 @@
         textarea {
           border-radius: 3px;
           font-size: 1em;
-          height: 400px;
+          height: 250px !important;
           overflow: scroll;
           padding: 10px;
           width: 90%;
