Adding footer and various other changes to SCSS files.

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -49,4 +49,46 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="app__footer">
+      <div class="row">
+        <div class="col-sm-3">
+          <h6>
+            <strong>Federal Election Commission</strong>
+            <br>
+            <address>1050 First Street NE, Washington DC, 20002
+            <br>
+            <a href="https://fec.gov/contact" target="_blank">fec.gov/contact</a>
+            </address>
+          </h6>
+        </div>
+        <div class="col-sm-2">
+          <h6>
+            <strong>Main Office</strong>
+            <br>
+            <address>(202) 694-1000
+            </address>
+          </h6>
+        </div>
+        <div class="col-sm-3">
+          <h6><strong>RAD Analyst, Chami Mukerjee</strong>
+            <br>
+            <address>(202) 694-1001
+            <br>
+            <a href="#" target="_blank">Find & contact your committee's analyst</a>
+            </address>
+          </h6>
+        </div>
+        <div class="col-sm-2">
+          <h6><strong>Tech Support</strong>
+            <br>
+            <address>(202) 694-1002
+            <br>
+            <a href="mailto:tech@fec.gov" target="_blank">tech@fec.gov</a>
+            </address>
+          </h6>
+        </div>        
+      </div>
+    </div>
+  </footer>
 </div>
