--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -88,7 +88,7 @@
       </div>        
     </div> <!-- ./content -->
   </section>
-  <footer>
+  <!--footer>
     <div class="footer">
       <div class="legal-disclaimer">
         <button
@@ -107,6 +107,6 @@
         </p>          
       </div>          
     </div>
-  </footer>  
+  </footer-->  
 </div> <!-- ./dashboard -->
   
