--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -4,12 +4,12 @@
   display: table;
   table-layout: fixed;
   // height: 100vh;
-  min-height: 120vh;
+  min-height: $mainContentHeight;
   margin: 0;
   padding: 0;
   width: 100%;  
   @include firefoxOnly() {
-    height: 100vh;
+    height: $mainContentHeight;
   }
   .form__alerts {
     background-color: $bombay;
