--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -10,6 +10,7 @@ $blueZodiac: #112E51; // primary blue
 $horizon: #5F82A4; // secondary blue
 $pelorous: #35BDBB; // light green
 $dodgerBlue: #30B9FB;
+$spindle: #B4DAEC; // really light blue
 
 $primaryBlue: $blueZodiac;
 $secondaryBlue: $horizon;
@@ -19,3 +20,5 @@ $black: #000;
 $red: #f00;
 
 $silverChalice: #AAAAAA;
+
+
