--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -1,6 +1,7 @@
  @import '../shared/scss/global';
 
 .app-container {
+  background-color: $mercury;
   color: $black;
   min-height: 100vh;
   transition: all 0.4s ease 0s;
@@ -18,6 +19,20 @@
     .app__side-nav {
       left: 0;
     }
+    footer {
+      .app__footer {
+        padding-left: 80px;
+        @include media(tablet) {
+          padding-left: 100px;
+        }
+        @include media(mediumDesktop) {
+          padding-left: 130px;
+        }         
+        @include media(largeDesktop) {
+          padding-left: 130px;
+        }
+      }
+    }    
   }
   &.dashboard.active {
     padding-left: 0;
@@ -25,14 +40,28 @@
       padding-left: 0
     }
     @include media(mediumDesktop) {
-      padding-left: 200px;
+      padding-left: 240px;
     }         
     @include media(largeDesktop) {
-      padding-left: 200px;
+      padding-left: 240px;
     }     
     .app__side-nav {
       left: 0;
-    }    
+    }   
+    footer {
+      .app__footer {
+        padding-left: 80px;
+        @include media(tablet) {
+          padding-left: 100px;
+        }
+        @include media(mediumDesktop) {
+          padding-left: 130px;
+        }         
+        @include media(largeDesktop) {
+          padding-left: 130px;
+        }         
+      }
+    } 
   }
  .app__top {
     background-color: $dustyGray;
@@ -130,11 +159,11 @@
     z-index: 1000;
   } // .app__side-nav  
   main {
-    height: 98%;
+    height: 80%;
     .app__content-wrapper {
       background-color: $mercury;
       margin: 0 auto;
-      min-height: 100vh;
+      min-height: $mainContentHeight;
       padding-left: 50px;
       padding-top: 60px;
       transition: all 0.4s ease 0s;
@@ -179,9 +208,38 @@
       .app__content {
         background-color: $white;
         margin: 0 auto;
-        min-height: 85vh;
+        min-height: $mainContentHeight;
         width: 90%;
       }
     }
+  } // main
+  .app__footer {
+    background-color: $mercury;
+    color: $black;
+    margin-top: 5px;
+    padding-left: 80px;
+    @include media(tablet) {
+      padding-left: 100px;
+    }
+    @include media(mediumDesktop) {
+      padding-left: 130px;
+    }         
+    @include media(largeDesktop) {
+      padding-left: 130px;
+    }     
+    .row {
+      margin-left: 0;
+      margin-right: 0;
+      div[class^="col-sm"] {
+        a {
+          color: $dodgerBlue;
+          &:hover,
+          &:active,
+          &:visited {
+            color: $dodgerBlue;
+          }
+        }
+      }
+    }
   }      
-}
+} // .app-container   
