--- a/front-end/src/app/forms/forms.component.scss
+++ b/front-end/src/app/forms/forms.component.scss
@@ -5,7 +5,7 @@
   color: $black;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: $mainContentHeight;
   position: relative;
   width: 100%;
   .forms-container__main {
