--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -1,6 +1,7 @@
 @import '../../../../node_modules/bootstrap/scss/functions';
 @import '../../../../node_modules/bootstrap/scss/variables';
 @import '../../../../node_modules/bootstrap/scss/mixins';
+@import '../../../../node_modules/bootstrap/scss/grid';
 @import '../../../../node_modules/bootstrap/scss/dropdown';
 @import '../../../../node_modules/bootstrap/scss/tooltip';
 @import '../../../../node_modules/bootstrap/scss/card';
