--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -111,9 +111,9 @@
         display: table-cell;
       } */
       &.preview {
-        @include firefoxOnly() {
+        /* @include firefoxOnly() {
           display: table-cell;
-        }        
+        }  */       
       }
       @include media(tablet) {
         padding-left: 2px;
