fixing CSS error

--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -110,7 +110,7 @@
 /*       &.preview {
         display: table-cell;
       } */
-      &.preview {
+      //&.preview {
       @include media(tablet) {
         padding-left: 2px;
       }
