Conerting confirm dialog for form alert to modal window.

--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -6,11 +6,14 @@ $dustyGray: #9B9B9B; // dark gray
 $shuttleGray: #5B616B; //really dark gray
 $mercury: #E6E6E6; // really light gray
 
+
+
 $blueZodiac: #112E51; // primary blue
 $horizon: #5F82A4; // secondary blue
 $pelorous: #35BDBB; // light green
-$dodgerBlue: #30B9FB;
+$dodgerBlue: #30B9FB; // light blue
 $spindle: #B4DAEC; // really light blue
+$crusta: #F77B42; // orange
 
 $primaryBlue: $blueZodiac;
 $secondaryBlue: $horizon;
