--- a/front-end/src/app/forms/forms.component.scss
+++ b/front-end/src/app/forms/forms.component.scss
@@ -39,6 +39,27 @@
   }
   @include clearfix();
 }
-
+.modal {
+  .modal-dialog {
+    .modal-content {
+      .modal-header {
+        background-color: $crusta;
+        color: $white;
+        .btn-link {
+          color: $white;
+          &:hover,
+          &:active,
+          &:visited {
+            color: $white;
+            text-decoration: none;
+          }
+        }
+      }
+      .modal-body {
+        color: $black;
+      }
+    }
+  }
+}
 
 
