--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -7,6 +7,7 @@
 @import '../../../../node_modules/bootstrap/scss/card';
 @import '../../../../node_modules/bootstrap/scss/nav';
 @import '../../../../node_modules/bootstrap/scss/navbar';
+@import '../../../../node_modules/bootstrap/scss/modal';
 
 @import './custom-variables';
 @import './custom-colors';
