Updating alert box

--- a/front-end/src/app/forms/forms.component.html
+++ b/front-end/src/app/forms/forms.component.html
@@ -13,7 +13,7 @@
     	type="button" 
     	class="close btn btn-link" 
     	aria-label="Close" 
-    	(click)="modalResponse('cancel')"
+    	(click)="modal.close('cancel')"
     >
       <span aria-hidden="true">&times;</span>
     </button>
