--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -199,7 +199,7 @@
       </section>
       <footer>
         <div class="grid-row">
-          <div class="grid-row__col grid-row__col--12 text-center">
+          <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
                 <button
                   class="btn btn-default btn-left"
