--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -150,38 +150,25 @@
       </div> <!-- ./content -->
     </section>
     <footer>
-      <div class="grid-row btn-row">
-        <div class="grid-row__col--12">
-          <hr />
-          <button 
-            class="btn btn-secondary btn-right" 
-            type="button"
-            (click)="saveForm()"
-            [disabled]="(frmReason.controls.reasonText.errors?.requiredLength) || (! _valid_file)"
-          >
-            Save 
-          </button>     
-        </div>
-      </div> 
       <div class="grid-row">
-        <div class="grid-row__col grid-row__col--6">
-          <button 
-            class="btn btn-previous btn-left" 
-            type="button"
-            (click)="previousStep()"
-          >
-            Previous 
-          </button>          
-        </div>
-        <div class="grid-row__col grid-row__col--6">
-          <button 
-            class="btn btn-primary btn-right" 
-            type="submit"
-            [disabled]="frmReason.controls.reasonText.errors?.requiredLength"
-          > 
-            Next
-          </button>          
-        </div>
+        <div class="grid-row__col grid-row__col--12">
+          <div class="forms__btn-container">
+            <button 
+              class="btn btn-previous btn-left" 
+              type="button"
+              (click)="previousStep()"
+            >
+              Previous 
+            </button>
+            <button 
+              class="btn btn-primary btn-right" 
+              type="submit"
+              [disabled]="frmReason.controls.reasonText.errors?.requiredLength"
+            > 
+              Next
+            </button>  
+          </div>  
+        </div> 
       </div> 
     </footer>
   </form>
