--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -5,6 +5,14 @@
 		margin: 0 auto 5px auto;
 		width: 99%;
 	}	
+	.grid-row {
+		margin-left: 0;
+		margin-right: 0;
+		.grid-row__col {
+			padding-left: 0;
+			padding-right: 0;
+		}
+	}
 	header {    
 	    .header-container {
 	      display: block;
@@ -134,6 +142,7 @@
 	}
 }
 footer {
+	margin-bottom: 10px;
 	.grid-row {
 		.grid-row__col--12 {
 		    .forms__btn-container {
