--- a/front-end/src/app/shared/partials/steps/steps.component.scss
+++ b/front-end/src/app/shared/partials/steps/steps.component.scss
@@ -63,7 +63,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-family: arial, helvetica, sans-serif;
+      // font-family: $mainFontFamily;
     }
   }
 }
