--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -16,6 +16,7 @@
           type="button"
           class="btn btn-validate"
           (click)="validateForm()"
+          [disabled]="true"
         >
             Validate
           </button>
