--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -20,6 +20,7 @@
              type="button"
              class="btn btn-validate"
              (click)="validateForm()"
+             [disabled]="true"
            >
                Validate
              </button>
