Fixing alert msg not showing when logout link clicked.

--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -121,7 +121,7 @@
                 </a>                  
               </div>
               <div>
-                <a [routerLink]="['/logout']" (click)="logout()">
+                <a [routerLink]="['/logout']">
                   Logout
                 </a>                
               </div>
