Got the confirm dialog working as a external component, removed access.log from .gitignore

--- a/front-end/src/app/forms/forms.component.scss
+++ b/front-end/src/app/forms/forms.component.scss
@@ -39,7 +39,7 @@
   }
   @include clearfix();
 }
-.modal {
+/* .modal {
   .modal-dialog {
     .modal-content {
       margin-left: auto;
@@ -72,6 +72,6 @@
       }
     }
   }
-}
+} */
 
 
