Updating fonts for preview screen

--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -104,7 +104,16 @@
 				    padding-left: 0;
 					position: relative;
 					width: 100%;				    				
-				} 				
+				} 
+				.label {
+					font-family: $labelFontFamily;
+					font-weight: bold;
+					margin-bottom: 1em;
+				}				
+				.text {
+					font-family: $mainFontFamily;
+					margin-bottom: 1em;
+				}
 			}	
 			.validate__form {
 			&.show-alerts {
