--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -45,6 +45,7 @@
               }            
             }            
             .list-item__link {
+              font-family: $titleFontFamily;
               width: 197px;
             }
             .list-item__info {
