--- a/front-end/src/app/shared/scss/_custom-variables.scss
+++ b/front-end/src/app/shared/scss/_custom-variables.scss
@@ -10,6 +10,7 @@ $screen-lg-min: 1200px;
 
 $mainFontFamily: 'Karla';
 $titleFontFamily: 'Gandhi Serif Regular';
+$labelFontFamily: 'Gandhi Serif Bold';
 $committeeInfoFontFamily: 'Gandhi Serif Regular';
 
 $sideBarWidth: 275px;
